-- Fixed map height issues by adding height: auto; position: absolute; and using top: 88px; bottom: 44px;    -- map now loads in the correct space on iphones and ipads

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -21,7 +21,7 @@
   left: 0;
   right: 0;
   width: 100%;
-  height: 80%;
+  height: auto;
   min-height: 350px;
 }
 
